# HelloWorld

./: CMakeLists.txt  CMakePresets.json  README.md
src/executables/: CMakeLists.txt  main.cpp
src/librarys/: CMakeLists.txt  Lib.cpp
src/librarys/includes/Lib/: Lib.hpp
